--- a/GarageSale/Base.lproj/Main.storyboard
+++ b/GarageSale/Base.lproj/Main.storyboard
@@ -119,39 +119,50 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="AqQ-VD-fxu">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="37" y="20" width="301" height="647"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="D4A-nW-wAf">
-                                    <size key="itemSize" width="108" height="152"/>
+                                    <size key="itemSize" width="235" height="494"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SaleDetailCell" id="u9j-EG-IID" customClass="SaleDetailsCollectionViewCell" customModule="GarageSale" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="108" height="152"/>
+                                        <rect key="frame" x="33" y="0.0" width="235" height="494"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="108" height="152"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="235" height="494"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jbI-JN-iYN">
-                                                    <rect key="frame" x="0.0" y="0.0" width="108" height="152"/>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3KW-08-JGl">
-                                                    <rect key="frame" x="33" y="111" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3KW-08-JGl">
+                                                    <rect key="frame" x="96" y="455" width="42" height="21"/>
+                                                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" red="0.0014362927319999999" green="0.50582963199999997" blue="0.0022285389480000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="exF-d1-4BB">
+                                                    <rect key="frame" x="96" y="18" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jbI-JN-iYN">
+                                                    <rect key="frame" x="0.0" y="44" width="235" height="403"/>
+                                                </imageView>
                                             </subviews>
                                         </view>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstItem="jbI-JN-iYN" firstAttribute="top" secondItem="u9j-EG-IID" secondAttribute="top" id="CgC-4r-Zyq"/>
-                                            <constraint firstAttribute="trailing" secondItem="jbI-JN-iYN" secondAttribute="trailing" id="NQ5-qg-D7s"/>
-                                            <constraint firstItem="jbI-JN-iYN" firstAttribute="leading" secondItem="u9j-EG-IID" secondAttribute="leading" id="pAy-Fc-XG2"/>
-                                            <constraint firstAttribute="bottom" secondItem="jbI-JN-iYN" secondAttribute="bottom" id="rZP-E3-dNy"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="3KW-08-JGl" secondAttribute="bottom" constant="10" id="FbW-ci-JLN"/>
+                                            <constraint firstItem="exF-d1-4BB" firstAttribute="top" secondItem="u9j-EG-IID" secondAttribute="topMargin" constant="10" id="W0G-Fx-oTd"/>
+                                            <constraint firstItem="3KW-08-JGl" firstAttribute="centerX" secondItem="u9j-EG-IID" secondAttribute="centerX" id="WHg-E2-PiY"/>
+                                            <constraint firstAttribute="trailing" secondItem="jbI-JN-iYN" secondAttribute="trailing" id="WMi-3T-JDy"/>
+                                            <constraint firstItem="jbI-JN-iYN" firstAttribute="top" secondItem="exF-d1-4BB" secondAttribute="bottom" constant="5" id="Xrd-ac-Oam"/>
+                                            <constraint firstItem="3KW-08-JGl" firstAttribute="top" secondItem="jbI-JN-iYN" secondAttribute="bottom" constant="8" id="aSt-oD-Yna"/>
+                                            <constraint firstItem="jbI-JN-iYN" firstAttribute="leading" secondItem="u9j-EG-IID" secondAttribute="leading" id="cyj-U1-WZo"/>
+                                            <constraint firstItem="exF-d1-4BB" firstAttribute="centerX" secondItem="u9j-EG-IID" secondAttribute="centerX" id="eUV-dM-SDw"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="itemImageView" destination="jbI-JN-iYN" id="DOm-Um-64S"/>
@@ -160,13 +171,29 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="▶" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GQW-56-edG">
+                                <rect key="frame" x="343" y="315.5" width="27" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="◀" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SI5-rz-SKm">
+                                <rect key="frame" x="5" y="315.5" width="27" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="1qk-Ok-jI8" firstAttribute="trailing" secondItem="AqQ-VD-fxu" secondAttribute="trailing" id="4fw-sQ-BSI"/>
+                            <constraint firstItem="AqQ-VD-fxu" firstAttribute="leading" secondItem="SI5-rz-SKm" secondAttribute="trailing" constant="5" id="2Ek-xG-5bC"/>
+                            <constraint firstItem="GQW-56-edG" firstAttribute="centerY" secondItem="9N5-dq-su0" secondAttribute="centerY" id="F8z-vk-xcG"/>
                             <constraint firstItem="1qk-Ok-jI8" firstAttribute="bottom" secondItem="AqQ-VD-fxu" secondAttribute="bottom" id="Rbf-KG-rGc"/>
+                            <constraint firstItem="GQW-56-edG" firstAttribute="leading" secondItem="AqQ-VD-fxu" secondAttribute="trailing" constant="5" id="SMH-X2-IJf"/>
+                            <constraint firstItem="SI5-rz-SKm" firstAttribute="leading" secondItem="1qk-Ok-jI8" secondAttribute="leading" constant="5" id="bVS-AN-wrq"/>
+                            <constraint firstItem="1qk-Ok-jI8" firstAttribute="trailing" secondItem="GQW-56-edG" secondAttribute="trailing" constant="5" id="jRy-B4-abF"/>
+                            <constraint firstItem="SI5-rz-SKm" firstAttribute="centerY" secondItem="9N5-dq-su0" secondAttribute="centerY" id="qIz-8m-SW8"/>
                             <constraint firstItem="AqQ-VD-fxu" firstAttribute="top" secondItem="1qk-Ok-jI8" secondAttribute="top" id="seN-7U-KUg"/>
-                            <constraint firstItem="AqQ-VD-fxu" firstAttribute="leading" secondItem="1qk-Ok-jI8" secondAttribute="leading" id="uGo-wn-ccc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="1qk-Ok-jI8"/>
                     </view>
@@ -176,7 +203,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xin-YE-zKM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3438" y="125"/>
+            <point key="canvasLocation" x="3437.5999999999999" y="124.58770614692655"/>
         </scene>
         <!--Select Location-->
         <scene sceneID="bcM-Sg-eoG">
